syntax="proto3";


package orders;


option go_package="pkg/proto/orders";

message Item {
    string item_id = 1;
    string name = 2;
    float cost = 3;
    int64 quantity = 4;
}

message Order {
    string customer_id = 1;
    string order_id = 2;
    string restaurant_id = 3;
    repeated Item items = 4;
    float discount = 5;
}

message PlaceOrderRequest {
    Order order = 1;
}

message PlaceOrderResponse {
    string response = 1;
}

message UpdateOrderRequest {
    string customer_id = 1;
    string order_id = 2;
    string item_id = 3;
    int64 quantity = 4;
}

message UpdateOrderResponse {
    string response = 1;
}


message GetSpecificOrderRequest {
    string customer_id = 1;
    string order_id = 2;
}

message GetSpecificOrderResponse {
    Order order = 1;
}


message DeleteOrderRequest {
    string customer_id = 1;
    string order_id = 2;
}

message DeleteOrderResponse {
    string response = 1;
}


service OrderService {
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse){}
    rpc UpdateOrder(UpdateOrderRequest) returns (UpdateOrderResponse){}
    rpc GetSpecificOrder(GetSpecificOrderRequest) returns (GetSpecificOrderResponse){}
    rpc DeleteOrder(DeleteOrderRequest) returns (DeleteOrderResponse){}
}

