syntax="proto3";


package restaurant;


option go_package="pkg/proto/restaurant";

message Item {
    string item_id = 1;
    string name = 2;
    float price = 3;
}

message Restaurant {
    string restaurant_id = 1;
    string name = 2;
    string address = 3;
    repeated Item items = 4;
}


message AddRestaurantRequest {
    Restaurant restaurant = 1;
}

message AddRestaurantResponse {
    string response = 1;
}

message GetAllRestaurantRequest {

}

message GetAllRestaurantResponse {
    int64 count = 1;
}

message GetSpecificRestaurantRequest {
    string restaurant_id = 1;
}

message GetSpecificRestaurantResponse {
    Restaurant restaurant = 1;
}

message AddRestaurantItemRequest {
    string restaurant_id = 1;
    string item_name = 2;
    float price = 3;
}

message AddRestaurantItemResponse {
    string response = 1;
}

message UpdateRestaurantItemRequest {
    string restaurant_id = 1;
    string item_id = 2;
    string item_name = 3;
    float price = 4;
}

message UpdateRestaurantItemResponse {
    string response = 1;
}

message DeleteItemRequest {
    string restaurant_id = 1;
    string item_id = 2;
}

message DeleteItemResponse {
    string response = 1;
}

message GetAllItemsRequest {
    string restaurant_id = 1;
}

message GetAllItemsResponse {
    repeated Item items = 1;
}

message GetSpecificItemRequest {
    string restaurant_id = 1;
    string item_id = 2;
}

message GetSpecificItemResponse {
    Item item = 1;
}

service RestaurantService {
    rpc AddRestaurant(AddRestaurantRequest) returns (AddRestaurantResponse){}
    rpc GetAllRestaurant(GetAllRestaurantRequest) returns (GetAllRestaurantResponse){}
    rpc GetSpecificRestaurant(GetSpecificRestaurantRequest) returns (GetSpecificRestaurantResponse){}
    rpc AddRestaurantItem(AddRestaurantItemRequest) returns (AddRestaurantItemResponse){}
    rpc UpdateRestaurantItem(UpdateRestaurantItemRequest) returns (UpdateRestaurantItemResponse){}
    rpc DeleteItem(DeleteItemRequest) returns (DeleteItemResponse){}
    rpc GetAllItems(GetAllItemsRequest) returns (GetAllItemsResponse){}
    rpc GetSpecificItem(GetSpecificItemRequest) returns (GetSpecificItemResponse){}
}

